tgo: Added paypal button for donation
tgo: Removed twitter "follow" stuff which was not following standards of W3C

tgo: Added simple twitter button linking to the we sun solve account.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -234,3 +234,16 @@ input {
   margin-right: auto;
   margin-left: auto;
 }
+
+#head_twit {
+  text-align: right;
+  margin-right: 15px;
+  margin-top: 2px;
+  margin-bottom: auto;
+  float: left;
+}
+
+#head_twit img {
+  width: 35px;
+  border: 0px;
+}
