tgo: Added link to lastreadme into menu and into main page

--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -197,7 +197,6 @@ select {
   vertical-align: sub;
 }
 
-
 /* Content ID */
 
 #d_content {
@@ -385,6 +384,10 @@ p.warning {
 }
 
 .redtd a {
+  color: #ffffff;
+}
+
+.darklink {
   color: #ffffff;
 }
 
