tgo: Added first API shot... tgo: Updated docs with first API action

--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -365,6 +365,10 @@ p.warning {
   background-color: green;
 }
 
+.greentd a {
+  color: #000000;
+}
+
 .orangetd {
   background-color: #ff9900;
 }
