--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -511,10 +511,26 @@ ul.listinfo {
   padding-bottom: 2px;
 }
 
+
+ul.listlink {
+  list-style-type:none;
+  padding:0px;
+  margin:0px;
+}
+
+.listlink li {
+  background-image: url(/img/page_link.png);
+  background-repeat: no-repeat;
+  background-position: 0;
+  padding-left: 20px;
+  margin-left:20px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+
 ul.listtick {
   list-style-type:none;
-/*  list-style-image:url('/img/tick.png'); 
-  vertical-align: middle;*/
   padding:0px;
   margin:0px;
 }
