tgo:  	 Added some Piwik tracking functions 	 Added support for Solaris 8 and 9 checksumming 	 Added the support of archive/none cpio format 	 Added a flags() method for patches 	 Fixed bug with user list 	 CSS minor changes 	 Changed display for list of patches inside bundles 	 Added fpMD5 to allow sfpC.pl tool to query fingerprint database

--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -395,6 +395,16 @@ p.warning {
   color: #ffffff;
 }
 
+.violettd {
+  background-color: violet;
+  color: #ffffff;
+}
+
+.violettd a {
+  color: #ffffff;
+}
+
+
 /* Nav bar & legend */
 
 .navtd {
