--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -292,6 +292,14 @@ select {
   margin: 0px;
 }
 
+.treeL1 {
+  margin-left: 10px;
+}
+
+.treeL2 {
+  margin-left: 20px;
+}
+
 .listbox ul {
   list-style-type:none;
   list-style-position: inside;
