--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -379,6 +379,7 @@ p.warning {
 
 .greentd {
   background-color: green;
+  color: #000000;
 }
 
 .greentd a {
@@ -508,6 +509,8 @@ p.warning {
 .ctable td {
   padding-left: 3px;
   padding-right: 3px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .tdcode {
