--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -300,6 +300,22 @@ select {
   margin-left: 20px;
 }
 
+.bullet ul {
+  list-style-type: disc;
+  padding: 0px;
+  margin-left: 0px;
+  padding-bottom: 0px;
+}
+
+.bullet li {
+  list-style-type: disc;
+  margin-left: 40px;
+  padding-left: 0px;
+  font-size: 0.9em;
+  padding-bottom: 2px;
+  padding-top: 2px;
+}
+
 .listbox ul {
   list-style-type:none;
   list-style-position: inside;
