tgo:	Added User-Reports to Database 	Added UReport() 	Added del_ureport, add_ureport and send_ureport 	Added listing of report through /panel 	Implemented __toString() to Login() 	Added static _sendTo() to allow sending mail to user 	outside of the mailling system. 	Added fetchUntil() to Patch() 	Added fetchFirst($days) to Patchdiag() 	Added some CVE/patches counters to report 	Added TOC to css 	Changed piwik to be always http:// 	Modified /login link to use SSL by default

--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -707,3 +707,25 @@ a:hover {
   width: 870px;
   text-align: left;
 }
+
+.toclist li {
+  background-image: url(http://wesunsolve.net/img/tag_red.png);
+  background-repeat: no-repeat;
+  background-position: 0;
+  padding-left: 20px;
+  margin-left: 50px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+ul.toclist {
+  list-style-type:none;
+}
+.toclist ul {
+  list-style-type:none;
+  list-style-position: inside;
+  vertical-align: middle;
+  padding: 0px;
+  margin-left: 0px;
+  padding-bottom: 0px;
+}
+
