tgo: Changed email address references      Added CSS to format <pre> tags

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,7 +1,7 @@
 /**
  * We Sun Solve! main CSS theme
  *
- * 2011 - Gouverneur Thomas <tgo@ians.be>
+ * 2011 - Gouverneur Thomas <tgo@espix.net>
  */
 
 
