--- a/www/css/wesunsolve.css
+++ b/www/css/wesunsolve.css
@@ -1,7 +1,7 @@
 /**
  * We Sun Solve! main CSS theme
  *
- * 2011 - Gouverneur Thomas <tgo@ians.be>
+ * 2011 - Gouverneur Thomas <tgo@espix.net>
  */
 
 
@@ -27,6 +27,14 @@ body {
 .bigtxt {
   width: 500px;
   height: 300px;
+}
+
+pre {
+    white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
+    white-space: -pre-wrap; /* Opera */
+    white-space: -o-pre-wrap; /* Opera */
+    white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+    word-wrap: break-word; /* IE 5.5+ */
 }
 
 textarea {
